k8s/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          ports:
          - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
    app: grafana-service
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
  - port: 3000 # pod
    targetPort: 3000 # container: actual port
