k8s/php-apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
spec:
  selector:
    matchLabels:
      app: php-apache # This has to match labels of template below
  replicas: 1
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: php-apache # This has to match matchLabels above
    spec:
      containers:
      - name: php-apache
        image: chienphamvu/php-apache
---

apiVersion: v1
kind: Service
metadata:
  name: php-apache-service
  labels:
    app: php-apache-service
spec:
  type: ClusterIP
  selector:
    app: php-apache
  ports:
  - port: 80 # this service port (pod port)
    targetPort: 80 # container: actual port
