k8s/phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin # This has to match labels of template below
  replicas: 1
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: phpmyadmin # This has to match matchLabels above
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  labels:
    app: phpmyadmin-service
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin
  ports:
  - port: 80 # pod
    targetPort: 80 # container: actual port
