k8s/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  selector:
    matchLabels:
      app: prometheus
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          volumeMounts:
            - readOnly: true
              mountPath: /etc/prometheus/
              name: prometheus-config
          ports:
          - containerPort: 9090
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config-map

---

apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  labels:
    app: prometheus-service
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
  - port: 9090 # pod
    targetPort: 9090 # container: actual port
