k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  # annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: php-apache-service
              port:
                number: 80
    - host: phpmyadmin.local
      http:
        paths:  
        - path: /
          pathType: Prefix
          backend:
            service:
              name: phpmyadmin-service
              port:
                number: 80
    - host: prometheus.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-service
              port:
                number: 80
    - host: grafana.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana-service
              port:
                number: 3000
